err/djangode.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DjangoDE-0.2.egg-info'...
Listing './lib/python3.5/site-packages/djangode'...
Listing './lib/python3.5/site-packages/djangode/data'...
Listing './lib/python3.5/site-packages/djangode/data/autocomplete'...
Compiling './lib/python3.5/site-packages/djangode/data/autocomplete/autocompleter.py'...
***   File "./lib/python3.5/site-packages/djangode/data/autocomplete/autocompleter.py", line 66
    except SyntaxError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djangode/data/autocomplete/value.py'...
***   File "./lib/python3.5/site-packages/djangode/data/autocomplete/value.py", line 45
    raise ValueError, "No types can be called (%s)." % (self.type)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangode/gui'...
Listing './lib/python3.5/site-packages/djangode/gui/highlighters'...
Listing './lib/python3.5/site-packages/djangode/gui/wizards'...
Listing './lib/python3.5/site-packages/djangode/project'...
Compiling './lib/python3.5/site-packages/djangode/project/project.py'...
***   File "./lib/python3.5/site-packages/djangode/project/project.py", line 62
    except RunnerStopped, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangode/runner'...
Compiling './lib/python3.5/site-packages/djangode/runner/get_urls.py'...
***   File "./lib/python3.5/site-packages/djangode/runner/get_urls.py", line 31
    print pattern
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/djangode/runner/main.py'...
***   File "./lib/python3.5/site-packages/djangode/runner/main.py", line 62
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djangode/runner/send_msg.py'...
***   File "./lib/python3.5/site-packages/djangode/runner/send_msg.py", line 39
    print resp
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djangode/tests'...
Listing './lib/python3.5/site-packages/djangode/utils'...
Compiling './lib/python3.5/site-packages/djangode/utils/config.py'...
***   File "./lib/python3.5/site-packages/djangode/utils/config.py", line 57
    raise ValueError, "Unknown QVariant type %s." % (value.typeName(), )
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djangode/utils/runner.py'...
***   File "./lib/python3.5/site-packages/djangode/utils/runner.py", line 69
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djangode/utils/set_proxy.py'...
***   File "./lib/python3.5/site-packages/djangode/utils/set_proxy.py", line 30
    print host, port
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
